--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1"
          metadata-complete="true">
-    可修改servlet版本为3.1
+    <!--可修改servlet版本为3.1-->
 <!--<!DOCTYPE web-app PUBLIC-->
  <!--"-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"-->
  <!--"http://java.sun.com/dtd/web-app_2_3.dtd" >-->
